# ngwa-rs

./: .gitignore  Cargo.toml  docker-compose.yml
ngwa-app/: Cargo.toml
ngwa-app/src/: main.rs  spacetime_sync.rs
ngwa-app/src/spacetimedb_client/: add_edge_reducer.rs  add_node_reducer.rs  clear_selection_reducer.rs  create_workflow_reducer.rs  delete_edge_by_pins_reducer.rs  delete_edge_reducer.rs  delete_node_reducer.rs  delete_workflow_reducer.rs  drag_state_table.rs  drag_state_type.rs  end_drag_reducer.rs  execution_log_table.rs  execution_log_type.rs  finish_execution_reducer.rs  identity_connected_reducer.rs  identity_disconnected_reducer.rs  join_workflow_reducer.rs  leave_workflow_reducer.rs  mod.rs  move_node_reducer.rs  share_workflow_reducer.rs  start_drag_reducer.rs  start_execution_reducer.rs  toggle_node_disabled_reducer.rs  update_cursor_reducer.rs  update_drag_reducer.rs  update_nickname_reducer.rs  update_node_config_reducer.rs  update_node_name_reducer.rs  update_selection_reducer.rs  update_workflow_name_reducer.rs  user_presence_table.rs  user_presence_type.rs  user_selection_table.rs  user_selection_type.rs  workflow_edge_table.rs  workflow_edge_type.rs  workflow_node_table.rs  workflow_node_type.rs  workflow_table.rs  (+1 more)
ngwa-app/src/sync/: mod.rs
ngwa-core/: Cargo.toml
ngwa-core/src/: lib.rs
ngwa-executor/: Cargo.toml
ngwa-executor/src/: lib.rs
ngwa-nodes/: Cargo.toml
ngwa-nodes/src/: lib.rs
ngwa-scheduler/: Cargo.toml
ngwa-scheduler/src/: lib.rs
ngwa-spacetime/: Cargo.toml
ngwa-spacetime/src/: lib.rs
