[workspace]
resolver = "2"
members = [
    "ngwa-core",
    "ngwa-executor",
    "ngwa-scheduler",
    "ngwa-nodes",
    "ngwa-app",
    "ngwa-spacetime",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Hannes"]
license = "MIT"

[workspace.dependencies]
# Internal crates
ngwa-core = { path = "ngwa-core" }
ngwa-executor = { path = "ngwa-executor" }
ngwa-scheduler = { path = "ngwa-scheduler" }
ngwa-nodes = { path = "ngwa-nodes" }

# UI
iced = { version = "0.14", features = ["advanced", "wgpu", "tokio"] }
iced_nodegraph = { git = "https://github.com/tuco86/iced_nodegraph.git", branch = "main" }
iced_palette = { git = "https://github.com/tuco86/iced_palette.git", branch = "main" }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"

# SpacetimeDB
spacetimedb = "1.7"
spacetimedb-sdk = "1.10"  # Client SDK - must match server version for generated bindings

# Scheduling
cron = "0.12"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
log = "0.4"
