[package]
name = "ngwa-executor"
version.workspace = true
edition.workspace = true

[dependencies]
ngwa-core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
